--- a/BR-MS/login.html
+++ b/BR-MS/login.html
@@ -139,7 +139,7 @@
 <script src="res/dependencies.js"></script>
 <script>
     // var urlPrefix=require('/mods/backend').url;
-    var urlPrefix='http://10.112.128.63:8080/dispatch';
+    var urlPrefix='http://10.112.153.212:8080';
     var app = new Vue({
         el: '#app',
         data: function () {
