--- a/BR-MS/signup.html
+++ b/BR-MS/signup.html
@@ -359,7 +359,7 @@
                 this.loading = true;
                 $.ajax({
                     type: 'post',
-                    url: 'http://10.112.153.212:8080/register',
+                    url: 'http://10.112.153.212:8080/dispatch/register',
                     headers: {'Content-Type': 'application/json'},
                     data: JSON.stringify({
                         "username": this.form1.username,
