--- a/BR-MS/RepoManage.html
+++ b/BR-MS/RepoManage.html
@@ -238,7 +238,7 @@
         selectedLocations: []
     };
     var pageNum = 1, pageSize = 6, maxPage = 0, total = 0, lastPageItems = 0;
-    var maxPageRef = [], totalRef = [];
+    var maxPageRef = [], totalRef = [0,];
     var searchKey = {};
     var post = require('/mods/backend');
 
